--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^3.4",
+        "maatwebsite/excel": " 3.1.48",
         "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
