--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
-        "axios": "^1.6.1",
-        "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^0.8.0",
-        "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "@popperjs/core": "^2.11.8",
+        "axios": "^1.6.8",
+        "bootstrap": "^5.3.3",
+        "laravel-vite-plugin": "^1.0.2",
+        "sass": "^1.75.0",
+        "vite": "^5.2.8"
+    },
+    "dependencies": {
+        "flag-icon-css": "^4.1.7"
     }
 }
