--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/ui": "^4.2",
         "livewire/livewire": "^3.4",
         "maatwebsite/excel": " 3.1.48",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
